# sendinblue

./: Cargo.toml  LICENSE-MIT  rustfmt.toml
.github/workflows/: ci.yml
src/: client.rs  lib.rs  mailer.rs  transactional.rs
