[package]
name = "sendinblue"
version = "0.2.1"
authors = ["Arco Hsieh <yiyezhihen@gmail.com>", "Rosehsu <rosehsu47@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["api"]
description = "SendinBlue's API v3 Rust unofficial Library"
homepage = "https://github.com/WF-Engineering/sendinblue"
repository = "https://github.com/WF-Engineering/sendinblue"

[dependencies]
base64 = "0.12.0"
itertools = "0.9"
log = "0.4"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.7.0"
dotenv = "0.15.0"
